--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,4 +1,5 @@
 ---
+import Aside from "../components/Aside.astro";
 interface Props {
     title: string;
 }
@@ -15,8 +16,22 @@ const { title } = Astro.props;
         <meta name="generator" content={Astro.generator} />
         <title>{title}</title>
     </head>
-    <body class="bg-gray-200">
-        <slot />
+    <body class="">
+        <div id="dash" class="gap-2 h-screen relative">
+            <aside class="[grid-area: aside] flex flex-col">
+                <Aside />
+            </aside>
+            <main class="[grid-area: main]">
+                <slot />
+            </main>
+        </div>
     </body>
 </html>
-<style is:global></style>
+<style>
+    #dash {
+        display: grid;
+        grid-template-areas: "aside main main";
+        grid-template-columns: 250px 1fr;
+        grid-template-rows: 1fr;
+    }
+</style>
